[project]
name = "agentcore-pipecat"
version = "0.1.0"
description = "Example for building Pipecat bots deployable to Amazon Bedrock AgentCore"
requires-python = ">=3.10"
dependencies = [
    "aioice",
    "aiohttp",
    "bedrock-agentcore",
    "python-dotenv",
    "pipecat-ai[webrtc,daily,silero,deepgram,openai,cartesia,runner]",
    "pipecat-ai-small-webrtc-prebuilt>=2.0.0"
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit",
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]